# tapocalc

./: README.md  build-win32.sh  build-win64.sh  meson.build
src/libtapocalc/: libtapocalc.cpp
src/tapocalc-cli/: tapocalc-cli.cpp
